<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_obiquitous">Go Obiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="this_button_will">This button will launch my&#160;</string>
    <string name="app">&#160;app</string>
</resources>
